# robot

./: .gitignore  CLAUDE.md  Dockerfile  README.md
async_diffusion_policy-master/: .gitignore  CLAUDE.md  set_profile_velocity.py  setup_project.py
async_diffusion_policy-master/async_dp/: .gitignore  README.md  install_deps.py  main.py  pyproject.toml
async_diffusion_policy-master/async_dp/config/: settings.py
async_diffusion_policy-master/async_dp/docs/: INTERFACE_USAGE.md
async_diffusion_policy-master/async_dp/scripts/: optimize_gripper.py  run_simulation.py  visualize_traj.py
async_diffusion_policy-master/async_dp/src/controllers/: __init__.py  base_controller.py  dynamixel_controller.py
async_diffusion_policy-master/async_dp/src/core/: async_engine.py  shared_mem.py
async_diffusion_policy-master/async_dp/src/drivers/: robot_driver.py
async_diffusion_policy-master/async_dp/src/interfaces/: __init__.py  base.py  factory.py  grpc_interface.py  grpc_server.py  shm_interface.py
async_diffusion_policy-master/async_dp/src/interfaces/proto/: compile_proto.py  robot_interface.proto
async_diffusion_policy-master/async_dp/src/models/: diffusion_net.py  scheduler.py  train_engine.py
async_diffusion_policy-master/async_dp/src/utils/: dataset.py  math_utils.py
async_diffusion_policy-master/async_dp/tests/: test_driver.py  test_inference.py  test_interfaces.py  test_math_utils.py  test_model.py  test_shm.py  test_training.py
cobot_magic_ws/: Dockerfile  Dockerfile_
cobot_magic_ws/cobot_magic_four/collect_data/: collect_data.py  replay_data.py
cobot_magic_ws/cobot_magic_four/follow_control/: readme.md
cobot_magic_ws/cobot_magic_four/piper_ros_ws/: .gitignore  README(EN).md  README.MD  can_activate.sh  can_config.sh
cobot_magic_ws/cobot_magic_four/tools/: build.sh  camera_serial.sh  requirements.sh  rs_camera_serial.sh
cobot_magic_ws/cobot_magic_two/collect_data/: collect_data.py
piper_ws/: 99-can.rules  README.md  can_config.sh  can_find_and_config.sh  find_all_can_port.sh  requirements.txt  setup_dependencies.sh
piper_ws/src/: pyproject.toml  requirements.txt
piper_ws/src/piper_ros/src/piper/: CMakeLists.txt  package.xml  setup.py
piper_ws/src/piper_ros/src/piper/cpp/: CMakeLists.txt  planning_around_object.cpp
piper_ws/src/piper_ros/src/piper/examples/: 01.class_pub.py  02.class_sub.py  03.class_sub_pub.py  04.class_pub_piper_multi_MoveJ.py  04.class_pub_piper_single_MoveJ.py  05.class_sub_piper_Joint.py  06.class_pub_piper_MoveP.py  07.class_pub_piper_MoveL.py  08.class_pub_piper_MoveC.py  09.class_pub_piper_MoveAll.py  10.class_sub_piper_Point.py  11.class_pub_piper_Waypoint.py  11.class_pub_piper_Waypoint.yaml  12.class_keyboard_joint.py  13.class_keyboard_point.py  14.class_action_server.py  test.py
piper_ws/src/piper_ros/src/piper/launch/: start_single_piper.launch.py  start_single_piper_rviz.launch.py
piper_ws/src/piper_ros/src/piper/scripts/: piper_multi_ctrl_node.py  piper_single_ctrl_node.py
piper_ws/src/piper_sdk/: __init__.py
(+69 files in other folders)
